refactor(ui): remove redundant Sign Up buttons and enhance lesson navigation
- Removed unnecessary "Sign Up" buttons from multiple HTML pages to simplify UI
- Added click event listeners for next and previous lesson navigation buttons
- Refactored inline onclick handlers in main.js to standard event listeners
- Improved robustness by checking function existence before invocation
- Enhanced tab switching and lesson item click handling logic across courses pages

--- a/courses/bootstrap.html
+++ b/courses/bootstrap.html
@@ -869,6 +869,10 @@
                     showLesson(index);
                 });
             });
+            
+            // Add event listeners for navigation buttons
+            document.querySelector('.lesson-navigation .btn-primary').addEventListener('click', nextLesson);
+            document.querySelector('.lesson-navigation .btn-secondary').addEventListener('click', prevLesson);
         });
         
         // Run code function for each lesson
