--- a/courses/python.html
+++ b/courses/python.html
@@ -36,7 +36,6 @@
                 <button id="theme-toggle" class="theme-toggle">
                     <i class="fas fa-moon"></i>
                 </button>
-                <button class="btn btn-primary">Sign Up</button>
             </div>
         </div>
     </header>
@@ -2384,6 +2383,10 @@ def rock_paper_scissors():
                     showLesson(index);
                 });
             });
+            
+            // Add event listeners for navigation buttons
+            document.querySelector('.lesson-navigation .btn-primary').addEventListener('click', nextLesson);
+            document.querySelector('.lesson-navigation .btn-secondary').addEventListener('click', prevLesson);
         });
         
         // Run Python code function (simulated)
