--- a/courses/react.html
+++ b/courses/react.html
@@ -36,7 +36,6 @@
                 <button id="theme-toggle" class="theme-toggle">
                     <i class="fas fa-moon"></i>
                 </button>
-                <button class="btn btn-primary">Sign Up</button>
             </div>
         </div>
     </header>
@@ -1180,6 +1179,10 @@ const element = (
                     showLesson(index);
                 });
             });
+            
+            // Add event listeners for navigation buttons
+            document.querySelector('.lesson-navigation .btn-primary').addEventListener('click', nextLesson);
+            document.querySelector('.lesson-navigation .btn-secondary').addEventListener('click', prevLesson);
         });
         
         // Run code function for each lesson
