refactor(user): remove profile page and quiz scripts, add user.js
- Removed profile links from all navigation menus across pages
- Deleted embedded quiz scripts from html-quiz, css-quiz, javascript-quiz, python-quiz pages
- Added inclusion of js/user.js in main pages and course pages for user-related functionality
- Updated 404.html and other navigation to include Projects link and remove profile
- Refined README.md project structure to reflect removal of profile.html and addition of courses/projects.html
- Added new lesson navigation functions in html.html for better lesson control
- Cleaned up redundant script includes and standardized script order in course pages

--- a/courses/html.html
+++ b/courses/html.html
@@ -26,7 +26,6 @@
                     <li><a href="../quiz.html">Quiz</a></li>
                     <li><a href="../courses/projects.html">Projects</a></li>
                     <li><a href="../dashboard.html">Dashboard</a></li>
-                    <li><a href="../profile.html">Profile</a></li>
                     <li><a href="../settings.html">Settings</a></li>
                     <li><a href="../help.html">Help</a></li>
                     <li><a href="../about.html">About</a></li>
@@ -1941,10 +1940,34 @@ footer {
     <script src="../js/editor.js"></script>
     <script src="../js/progress.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
+</body>
+</html>
     <script>
         // Lesson navigation
         let currentLesson = 0;
         const lessons = document.querySelectorAll('.lesson-section');
+
+        function nextLesson() {
+            if (currentLesson < lessons.length - 1) {
+                lessons[currentLesson].classList.remove('active');
+                currentLesson++;
+                lessons[currentLesson].classList.add('active');
+            }
+        }
+
+        function previousLesson() {
+            if (currentLesson > 0) {
+                lessons[currentLesson].classList.remove('active');
+                currentLesson--;
+                lessons[currentLesson].classList.add('active');
+            }
+        }
+    </script>
+    <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
+</body>
+</html>
         const lessonItems = document.querySelectorAll('.lesson-item');
         
         // Expand topic functionality
