--- a/courses/python.html
+++ b/courses/python.html
@@ -26,7 +26,6 @@
                     <li><a href="../quiz.html">Quiz</a></li>
                     <li><a href="../courses/projects.html">Projects</a></li>
                     <li><a href="../dashboard.html">Dashboard</a></li>
-                    <li><a href="../profile.html">Profile</a></li>
                     <li><a href="../settings.html">Settings</a></li>
                     <li><a href="../help.html">Help</a></li>
                     <li><a href="../about.html">About</a></li>
@@ -2298,6 +2297,49 @@ def rock_paper_scissors():
                 </div>
             </div>
             <div class="footer-bottom">
+            <nav class="nav">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../courses.html">Courses</a></li>
+                    <li><a href="../tutorial.html">Tutorials</a></li>
+                    <li><a href="../quiz.html">Quiz</a></li>
+                    <li><a href="../courses/projects.html">Projects</a></li>
+                    <li><a href="../dashboard.html">Dashboard</a></li>
+                    <li><a href="../settings.html">Settings</a></li>
+                    <li><a href="../help.html">Help</a></li>
+                    <li><a href="../about.html">About</a></li>
+                </ul>
+            </nav>
+            <div class="footer">
+                <div class="footer-col">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../courses.html">Courses</a></li>
+                        <li><a href="../tutorial.html">Tutorials</a></li>
+                        <li><a href="../quiz.html">Quiz</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Resources</h4>
+                    <ul>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Documentation</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="../about.html">About Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Subscribe</h4>
+                    <p>Get the latest updates and news.</p>
+                    <form class="subscribe-form">
+                        <input type="email" placeholder="Your Email">
+                        <button type="submit"><i class="fas fa-paper-plane"></i></button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer-bottom">
+
                 <p>&copy; 2023 CodeMaster. All rights reserved.</p>
             </div>
         </div>
@@ -2308,6 +2350,7 @@ def rock_paper_scissors():
     <script src="../js/editor.js"></script>
     <script src="../js/progress.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
     <script>
         // Lesson navigation
         let currentLesson = 0;
@@ -2410,5 +2453,7 @@ def rock_paper_scissors():
             }, 1000);
         }
     </script>
+    <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
 </body>
 </html>
