--- a/quiz.html
+++ b/quiz.html
@@ -25,7 +25,6 @@
                     <li><a href="quiz.html" class="active">Quiz</a></li>
                     <li><a href="courses/projects.html">Projects</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
-                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="settings.html">Settings</a></li>
                     <li><a href="help.html">Help</a></li>
                     <li><a href="about.html">About</a></li>
@@ -165,5 +164,6 @@
     <script src="js/quiz.js"></script>
     <script src="js/achievements.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/user.js"></script>
 </body>
 </html>
