--- a/tutorial.html
+++ b/tutorial.html
@@ -26,7 +26,6 @@
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="courses/projects.html">Projects</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
-                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="settings.html">Settings</a></li>
                     <li><a href="help.html">Help</a></li>
                     <li><a href="about.html">About</a></li>
@@ -272,5 +271,6 @@ h1 {
     <script src="js/editor.js"></script>
     <script src="js/achievements.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/user.js"></script>
 </body>
 </html>
