--- a/404.html
+++ b/404.html
@@ -23,8 +23,8 @@
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="tutorial.html">Tutorials</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="courses/projects.html">Projects</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
-                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="settings.html">Settings</a></li>
                     <li><a href="help.html">Help</a></li>
                     <li><a href="about.html">About</a></li>
