--- a/courses.html
+++ b/courses.html
@@ -25,7 +25,6 @@
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="courses/projects.html">Projects</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
-                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="settings.html">Settings</a></li>
                     <li><a href="help.html">Help</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -117,6 +116,7 @@
     <script src="js/data.js"></script>
     <script src="js/progress.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/user.js"></script>
     <script>
         // Populate courses when data is loaded
         document.addEventListener('DOMContentLoaded', function() {
