--- a/courses/javascript.html
+++ b/courses/javascript.html
@@ -26,7 +26,6 @@
                     <li><a href="../quiz.html">Quiz</a></li>
                     <li><a href="../courses/projects.html">Projects</a></li>
                     <li><a href="../dashboard.html">Dashboard</a></li>
-                    <li><a href="../profile.html">Profile</a></li>
                     <li><a href="../settings.html">Settings</a></li>
                     <li><a href="../help.html">Help</a></li>
                     <li><a href="../about.html">About</a></li>
@@ -3070,6 +3069,7 @@ button:hover {
     <script src="../js/editor.js"></script>
     <script src="../js/progress.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
     <script>
         // Lesson navigation
         let currentLesson = 0;
@@ -3207,5 +3207,7 @@ button:hover {
             previewDocument.close();
         }
     </script>
+    <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
 </body>
 </html>
