--- a/courses/projects.html
+++ b/courses/projects.html
@@ -334,9 +334,7 @@
                     <li><a href="../courses.html">Courses</a></li>
                     <li><a href="../tutorial.html">Tutorials</a></li>
                     <li><a href="../quiz.html">Quiz</a></li>
-                    <li><a href="../courses/projects.html" class="active">Projects</a></li>
                     <li><a href="../dashboard.html">Dashboard</a></li>
-                    <li><a href="../profile.html">Profile</a></li>
                     <li><a href="../settings.html">Settings</a></li>
                     <li><a href="../help.html">Help</a></li>
                     <li><a href="../about.html">About</a></li>
@@ -479,5 +477,6 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/projects.js"></script>
+    <script src="../js/user.js"></script>
 </body>
 </html>
