feat(courses): enhance courses page with accessibility and static course cards
- Add skip links for main content, navigation, and footer to improve keyboard navigation
- Introduce ARIA roles and labels for landmarks including header, navigation, main, and footer sections
- Replace dynamic course card population with static HTML course cards including icons, meta info, and progress bars
- Refactor courses container and grid for clearer accessible region and labels
- Improve breadcrumb and search input accessibility with appropriate aria-labels
- Add aria-labels to buttons and links for better screen reader context
- Remove redundant JavaScript course population and search filtering scripts
- Enhance footer social links and subscription form with aria-labels for accessibility
- Remove embedded lesson navigation scripts from bootstrap course page and replace with user.js script only
- Include course-quiz.js script on CSS quiz page
- Refactor CSS course to populate lessons dynamically and add ARIA roles on sidebar and main areas
- Add "Mark as Complete" button with aria-label in CSS course for improved user interaction
- Adjust buttons and progress bars with appropriate aria attributes across courses pages

--- a/courses/css-quiz.html
+++ b/courses/css-quiz.html
@@ -160,6 +160,7 @@
         </div>
     </footer>
 
+    <script src="../js/course-quiz.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/user.js"></script>
 </body>
