--- a/courses/react.html
+++ b/courses/react.html
@@ -1211,5 +1211,7 @@ const element = (
             previewDocument.close();
         }
     </script>
+    <script src="../js/main.js"></script>
+    <script src="../js/user.js"></script>
 </body>
 </html>
