--- a/courses/python-quiz.html
+++ b/courses/python-quiz.html
@@ -160,6 +160,7 @@
         </div>
     </footer>
 
+    <script src="../js/course-quiz.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/user.js"></script>
 </body>
